--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,24 @@
 [project]
 name = "tencim1d-mesh-generator"
-version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 authors = [
     { name = "Henrique C. C. de Andrade", email = "henrique.ccda@gmail.com" }
 ]
 requires-python = ">= 3.12, < 3.14"
+dynamic = ["version"]
 dependencies = []
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=80", "setuptools-scm>=8"]
+build-backend = "setuptools.build_meta"
 
 [dependency-groups]
 dev = [
     "ipdb>=0.13.13",
     "mypy>=1.17.0",
     "ruff>=0.12.4",
+    "setuptools-scm>=9.2.1",
     "taskipy>=1.14.1",
 ]
 test = [
