--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,9 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "ipdb>=0.13.13",
-    "mypy>=1.17.0",
     "ruff>=0.12.4",
     "taskipy>=1.14.1",
+    "ty>=0.0.1a25",
 ]
 test = [
     "pytest>=8.4.1",
@@ -56,9 +56,9 @@ fmt = {cmd="uv run ruff format src tests", help="Formatador do código."}
 
 lin_ruff = {cmd="uv run ruff check src tests", help="Linter com o Ruff."}
 
-lin_mypy = {cmd="uv run mypy --package tests --package tencim1d_mesh_generator", help="Analisador estático de tipos."}
+lin_ty = {cmd="uv run ty check", help="Analisador estático de tipos."}
 
-linter = {cmd="task lin_ruff && task lin_mypy", help="Linter."}
+linter = {cmd="task lin_ruff && task lin_ty", help="Linter."}
 
 tests = {cmd="uv run pytest --cov=tencim1d_mesh_generator", help="Rodando os testes."}
 tests_report = {cmd="uv run pytest --cov-report html --cov=tencim1d_mesh_generator", help="Rodando os testes com cobertura."}
